package levin.protobuf;
option java_package = "org.levin.protobuf.generated.simple";
option java_outer_classname = "SearchRequestProtos";
option optimize_for = SPEED;

message SearchRequest {
    required string query_string = 1;
    optional int32 page_number = 2;
    optional int32 result_per_page = 3 [ default = 50 ];
}

